--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 /back/.env
 /back/.idea
-  
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+front/node_modules
+front/.pnp
+.pnp.js
+
+# testing
+front/coverage
+
+# production
+front/build
+
+# misc
+front/.DS_Store
+front/.env.local
+front/.env.development.local
+front/.env.test.local
+front/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
